# KTBB_APP_V2

./: .gitignore  CC_HANDOFF.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  SYSTEM_FLOW.md  UNIFIED_AUDIT_SYSTEM_PLAN.md  WORK_LOG.md  _analyze_zigzag.py  accuracy_decay_tracker.py  accuracy_report_generator.py  agent_core.py  ai_analyst.py  audit_ai.py  auth.py  backtest_lab.py  battle_control.py  battlebox_pipeline.py  battlebox_rules.py  billing.py  black_ops_engine.py  bounce_engine.py  campaign_engine.py  data_feed.py  database.py  database_manager.py  db_cleanup.py  debug_dmr.py  dmr_report.py  elliott_wave_specialist.py  external_intel_reporter.py  gpt_bridge.py  gravity_engine.py  gravity_interpreter.py  gravity_math.py  hash_ribbons.py  jewel_specialist.py  junior_analyst.py  kabroda_ai.py  kabroda_macro_engine.py  kabroda_mas_flow.py  (+58 more)
bold-hubble/: .gitignore  pyproject.toml
bold-hubble/indicators/: __init__.py  bbwp.py  ema_ribbon.py  pmarp.py  revin_ribbons.py  revin_suite_engine.py  rmo.py  rsi_divergence.py  rwp.py  three_drives.py  trend_volatility.py
bold-hubble/kqal/: db_reader.py  timeframe_analyzer.py
bold-hubble/kqal/output/: CLAUDE_CODE_HANDOFF.md  PHASE1_HANDOFF.md  PHASE2_HANDOFF.md  (+1 more)
bold-hubble/monitoring/: __init__.py  exhaustion_monitor.py
bold-hubble/pipeline/: __init__.py  krown_to_kabroda_bridge.py
bold-hubble/position_sizing/: __init__.py  position_sizing.py
bold-hubble/strategies/: __init__.py  krown_system.py  strategy_1_basic_trend.py  strategy_2_uptrend_pullback_long.py  strategy_3_downtrend_short.py  strategy_4_5_vol_scalps.py
(+83 files in other folders)
