[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kabroda-bold-hubble"
version = "0.1.0"
description = "Kabroda Bold Hubble — Krown Trading Bible quantitative strategies and indicators"

[tool.setuptools.packages.find]
where = ["."]
include = ["indicators*", "strategies*", "pipeline*", "kqal*"]
